k8s/apps/arr-stack/media/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: arr-stack
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: seerr
      ports:
        - protocol: TCP
          port: 7878 # radarr
        - protocol: TCP
          port: 8989 # sonarr
